--- a/index.html
+++ b/index.html
@@ -35,7 +35,86 @@
 
     <div id="gstResult"></div>
   </div>
+</section> 
+  <section class="container">
+  <h2>EMI Calculator</h2>
+  <div class="calculator">
+    <input type="number" id="emiPrincipal" placeholder="Loan Amount">
+    <input type="number" id="emiRate" placeholder="Interest Rate (%)">
+    <input type="number" id="emiMonths" placeholder="Tenure (Months)">
+    <button onclick="calculateEMI()">Calculate EMI</button>
+    <div id="emiResult"></div>
+  </div>
 </section>
+
+<section class="container">
+  <h2>SIP Calculator</h2>
+  <div class="calculator">
+    <input type="number" id="sipAmount" placeholder="Monthly Investment">
+    <input type="number" id="sipRate" placeholder="Expected Return (%)">
+    <input type="number" id="sipYears" placeholder="Time Period (Years)">
+    <button onclick="calculateSIP()">Calculate SIP</button>
+    <div id="sipResult"></div>
+  </div>
+</section>
+
+<section class="container">
+  <h2>Age Calculator</h2>
+  <div class="calculator">
+    <label style="display:block; margin-bottom:10px;">Date of Birth:</label>
+    <input type="date" id="dob">
+    <button onclick="calculateAge()">Calculate Age</button>
+    <div id="ageResult"></div>
+  </div>
+</section>
+
+<section class="container">
+  <h2>YouTube Money Calculator</h2>
+  <div class="calculator">
+    <input type="number" id="ytViews" placeholder="Daily Views">
+    <button onclick="calculateYouTube()">Estimated Earnings</button>
+    <div id="ytResult"></div>
+  </div>
+</section>
+
+<section class="container">
+  <h2>Instagram Earnings Calculator</h2>
+  <div class="calculator">
+    <input type="number" id="instaFollowers" placeholder="Number of Followers">
+    <button onclick="calculateInsta()">Est. Earnings (Per Post)</button>
+    <div id="instaResult"></div>
+  </div>
+</section>
+
+<section class="container">
+  <h2>Adsense Revenue Calculator</h2>
+  <div class="calculator">
+    <input type="number" id="adsenseImpressions" placeholder="Page Views">
+    <input type="number" id="adsenseCTR" placeholder="CTR (%)">
+    <input type="number" id="adsenseCPC" placeholder="CPC ($)">
+    <button onclick="calculateAdsense()">Calculate Revenue</button>
+    <div id="adsenseResult"></div>
+  </div>
+</section>
+
+<section class="container">
+  <h2>Salary Calculator</h2>
+  <div class="calculator">
+    <input type="number" id="ctc" placeholder="Annual CTC (Yearly Package)">
+    <button onclick="calculateSalary()">Calculate Monthly In-Hand</button>
+    <div id="salaryResult"></div>
+  </div>
+</section>
+
+<section class="container">
+  <h2>Income Tax Calculator</h2>
+  <div class="calculator">
+    <input type="number" id="income" placeholder="Annual Income">
+    <button onclick="calculateTax()">Calculate Tax (Est.)</button>
+    <div id="taxResult"></div>
+  </div>
+</section>
+
 <footer class="footer">
   <p>© 2026 CalcGrow.com | Free Online Calculators</p>
 </footer>
