--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
         <button onclick="calculateYoutube()">Calculate Earning 💰</button>
         <div id="ytResult"></div>
     </div>
-</secti
-  on>
+</section>
 
   <section id="insta" class="container" style="display:none;">
     <button class="back-btn" onclick="goHome()">⬅ Back to Menu</button>
