--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <link rel="icon" type="image/png" href="icon.png">
 <link rel="apple-touch-icon" href="icon.png">
 <meta name="google-site-verification" content="jAdmgTC9lrWf26six9s_FQXSm8vjOZUQ2f1G34UtR_U" />
+  <meta name="description" content="Free YouTube Money Calculator, Instagram Earnings, SIP, and Tax Calculators. Calculate your potential income instantly with CalcGrow.">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CalcGrow",
+  "url": "https://skachhi900-lgtm.github.io/calcgrow/",
+  "description": "All Smart Calculators in One Place.",
+  "image": "https://skachhi900-lgtm.github.io/calcgrow/icon.png"
+}
+</script>
+
 </head>
 <body>
 
