--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <section class="hero">
   <h1>Make Smarter Decisions in Seconds</h1>
   <p>Accurate calculators for money, health & digital growth — trusted by users worldwide.</p>
