--- a/emi.html
+++ b/emi.html
@@ -5,6 +5,7 @@
   <title>EMI Calculator – Calculate Loan EMI Online | CalcGrow</title>
   <meta name="description" content="Free EMI Calculator to calculate monthly loan payments for home, car or personal loans. Accurate, fast and privacy-focused.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
   <body>
 <section class="intro">
