--- a/emi-calculator.html
+++ b/emi-calculator.html
@@ -75,6 +75,6 @@
   <p><strong>Is this EMI calculator accurate?</strong><br>
   Yes, it uses the standard EMI calculation formula used by banks.</p>
     </section>
-    <script src="emicalculator.js"></script>
+    <script src="emi-calculator.js"></script>
 </body>
 </html>
