--- a/tools/yt-earning.html
+++ b/tools/yt-earning.html
@@ -57,6 +57,27 @@
   <footer>
     <p>© 2026 CalcGrow. All rights reserved.</p>
   </footer>
+  <body>
+
+  <!-- YOUTUBE EARNING UI -->
+  <input id="channelInput" placeholder="@channel or URL">
+  <button onclick="analyzeChannel()">Analyze</button>
+
+  <img id="chLogo">
+  <h3 id="chName"></h3>
+
+  <span id="chSubs"></span>
+  <span id="chViews"></span>
+  <span id="chVideos"></span>
+  <span id="chCountry"></span>
+
+  <span id="daily"></span>
+  <span id="monthly"></span>
+  <span id="yearly"></span>
+
+  <!-- JS -->
+  <script src="../assets/js/youtube.js"></script>
+  </body>
 
   <!-- YouTube Logic -->
   <script src="../assets/js/youtube.js"></script>
