--- a/tools/yt-earning.html
+++ b/tools/yt-earning.html
@@ -6,18 +6,15 @@
   <meta name="description" content="Estimate YouTube earnings daily, weekly, monthly and yearly. Built for creators worldwide.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Global CSS -->
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 
-  <!-- HEADER -->
   <header class="header">
     <h2>CalcGrow</h2>
   </header>
 
-  <!-- INTRO -->
   <section class="intro">
     <h1>YouTube Earnings Calculator</h1>
     <p>
@@ -26,7 +23,6 @@
     </p>
   </section>
 
-  <!-- CALCULATOR -->
   <section class="calculator-box">
     <label>Daily Views</label>
     <input type="number" id="views" placeholder="e.g. 100000">
@@ -37,7 +33,6 @@
     <button onclick="calculateYouTubeEarnings()">Calculate Earnings</button>
   </section>
 
-  <!-- RESULTS -->
   <section class="result-box">
     <h2>Your Estimated Earnings</h2>
     <p>Daily: <span id="daily">$0</span></p>
@@ -46,36 +41,52 @@
     <p>Yearly: <span id="yearly">$0</span></p>
   </section>
 
-  <!-- TRUST -->
+  <section class="calculator-box" style="margin-top: 30px; border-top: 1px solid #333; padding-top: 20px;">
+    <h3>Or Analyze a Channel Directly</h3>
+    <input id="channelInput" placeholder="@channel or URL" style="width: 100%; margin-bottom: 10px;">
+    <button onclick="analyzeChannel()">Analyze Channel</button>
+
+    <div style="margin-top: 20px; text-align: center;">
+      <img id="chLogo" style="width: 60px; border-radius: 50%; display: none; margin: 0 auto;">
+      <h3 id="chName" style="margin-top: 10px;"></h3>
+      
+      <div style="display: flex; gap: 15px; justify-content: center; color: #aaa; font-size: 14px;">
+        <span id="chSubs"></span>
+        <span id="chViews"></span>
+        <span id="chVideos"></span>
+      </div>
+      <p id="chCountry" style="color: #888; font-size: 12px;"></p>
+    </div>
+  </section>
+
   <section class="trust">
     <p>✔ Used by creators worldwide</p>
     <p>✔ Based on industry RPM standards</p>
     <p>✔ No data stored. 100% privacy safe</p>
   </section>
 
-  <!-- FOOTER -->
   <footer>
     <p>© 2026 CalcGrow. All rights reserved.</p>
   </footer>
-  <body>
 
-  <!-- YOUTUBE EARNING UI -->
-  <input id="channelInput" placeholder="@channel or URL">
-  <button onclick="analyzeChannel()">Analyze</button>
-
-  <img id="chLogo">
-  <h3 id="chName"></h3>
-
-  <span id="chSubs"></span>
-  <span id="chViews"></span>
-  <span id="chVideos"></span>
-  <span id="chCountry"></span>
-
-  <span id="daily"></span>
-  <span id="monthly"></span>
-  <span id="yearly"></span>
-
-  <!-- YouTube Logic -->
   <script src="../assets/js/youtube.js"></script>
-</body>
+
+  <script>
+    function calculateYouTubeEarnings() {
+      let v = document.getElementById('views').value;
+      let r = document.getElementById('rpm').value;
+      if(v && r) {
+        let d = (v / 1000) * r;
+        document.getElementById('daily').innerText = "$" + d.toFixed(2);
+        document.getElementById('weekly').innerText = "$" + (d * 7).toFixed(2);
+        document.getElementById('monthly').innerText = "$" + (d * 30).toFixed(2);
+        document.getElementById('yearly').innerText = "$" + (d * 365).toFixed(2);
+      } else {
+        alert("Please enter views and RPM");
+      }
+    }
+  </script>
+
+<
+  /body>
 </html>
