--- a/tools/yt-earning.html
+++ b/tools/yt-earning.html
@@ -1,92 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>YouTube Earnings Calculator | CalcGrow</title>
-  <meta name="description" content="Estimate YouTube earnings daily, weekly, monthly and yearly. Built for creators worldwide.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8" />
+  <title> Calcgrow – YouTubeGrow OS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
 
-  <header class="header">
-    <h2>CalcGrow</h2>
-  </header>
+<header class="top">
+  <h1>🚀 Calcgrow</h1>
+  <p>YouTubeGrow OS for Serious Creators</p>
+</header>
 
-  <section class="intro">
-    <h1>YouTube Earnings Calculator</h1>
-    <p>
-      Estimate how much a YouTube channel can earn based on views and RPM.
-      Trusted by creators worldwide.
-    </p>
-  </section>
+<!-- MODULE 1: SMART ANALYZER -->
+<section class="card">
+  <h2>🔥 YouTube Smart Analyzer</h2>
+  <input id="ytInput" placeholder="Paste channel / video URL / @handle" />
+  <button onclick="analyzeChannel()">Analyze Channel</button>
 
-  <section class="calculator-box">
-    <label>Daily Views</label>
-    <input type="number" id="views" placeholder="e.g. 100000">
-
-    <label>RPM ($)</label>
-    <input type="number" id="rpm" placeholder="e.g. 4.5">
-
-    <button onclick="calculateYouTubeEarnings()">Calculate Earnings</button>
-  </section>
-
-  <section class="result-box">
-    <h2>Your Estimated Earnings</h2>
-    <p>Daily: <span id="daily">$0</span></p>
-    <p>Weekly: <span id="weekly">$0</span></p>
-    <p>Monthly: <span id="monthly">$0</span></p>
-    <p>Yearly: <span id="yearly">$0</span></p>
-  </section>
-
-  <section class="calculator-box" style="margin-top: 30px; border-top: 1px solid #333; padding-top: 20px;">
-    <h3>Or Analyze a Channel Directly</h3>
-    <input id="channelInput" placeholder="@channel or URL" style="width: 100%; margin-bottom: 10px;">
-    <button onclick="analyzeChannel()">Analyze Channel</button>
-
-    <div style="margin-top: 20px; text-align: center;">
-      <img id="chLogo" style="width: 60px; border-radius: 50%; display: none; margin: 0 auto;">
-      <h3 id="chName" style="margin-top: 10px;"></h3>
-      
-      <div style="display: flex; gap: 15px; justify-content: center; color: #aaa; font-size: 14px;">
-        <span id="chSubs"></span>
-        <span id="chViews"></span>
-        <span id="chVideos"></span>
-      </div>
-      <p id="chCountry" style="color: #888; font-size: 12px;"></p>
+  <div class="grid">
+    <img id="chLogo" />
+    <div>
+      <h3 id="chName">Channel Name</h3>
+      <p>Subs: <span id="chSubs">--</span></p>
+      <p>Views: <span id="chViews">--</span></p>
+      <p>Videos: <span id="chVideos">--</span></p>
+      <p>Country: <span id="chCountry">--</span></p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="trust">
-    <p>✔ Used by creators worldwide</p>
-    <p>✔ Based on industry RPM standards</p>
-    <p>✔ No data stored. 100% privacy safe</p>
-  </section>
+<!-- MODULE 2: EARNINGS -->
+<section class="card">
+  <h2>💰 Earnings Intelligence</h2>
 
-  <footer>
-    <p>© 2026 CalcGrow. All rights reserved.</p>
-  </footer>
+  <input id="views" placeholder="Daily Views" />
+  <input id="rpm" placeholder="RPM ($)" />
+  <button onclick="calcEarnings()">Calculate</button>
 
-  <script src="../assets/js/youtube.js"></script>
+  <div class="earnings">
+    <p>Daily: $<span id="daily">0</span></p>
+    <p>Monthly: $<span id="monthly">0</span></p>
+    <p>Yearly: $<span id="yearly">0</span></p>
+  </div>
 
-  <script>
-    function calculateYouTubeEarnings() {
-      let v = document.getElementById('views').value;
-      let r = document.getElementById('rpm').value;
-      if(v && r) {
-        let d = (v / 1000) * r;
-        document.getElementById('daily').innerText = "$" + d.toFixed(2);
-        document.getElementById('weekly').innerText = "$" + (d * 7).toFixed(2);
-        document.getElementById('monthly').innerText = "$" + (d * 30).toFixed(2);
-        document.getElementById('yearly').innerText = "$" + (d * 365).toFixed(2);
-      } else {
-        alert("Please enter views and RPM");
-      }
-    }
-  </script>
+  <small>⚠️ Estimation based on average RPM</small>
+</section>
 
-<
-  /body>
+<!-- MODULE 3: CURRENCY -->
+<section class="card">
+  <h2>🌍 Currency Converter</h2>
+  <button onclick="convertINR()">Convert to INR</button>
+  <p>INR: ₹<span id="inr">0</span></p>
+</section>
+
+<!-- MODULE 4: DAILY TARGET -->
+<section class="card">
+  <h2>🔥 Daily Smart Targets</h2>
+
+  <label><input type="checkbox" class="task" /> Uploaded Video</label>
+  <label><input type="checkbox" class="task" /> Short Posted</label>
+  <label><input type="checkbox" class="task" /> Title Optimized</label>
+  <label><input type="checkbox" class="task" /> Thumbnail Tested</label>
+
+  <div class="progress">
+    Progress: <span id="progress">0%</span>
+  </div>
+</section>
+
+<!-- MODULE 5: TOOLS -->
+<section class="card">
+  <h2>🧰 Premium Tools</h2>
+  <p>✔ Thumbnail Downloader (UI Ready)</p>
+  <p>✔ Transcript Tool (API Phase-2)</p>
+  <p>✔ Hashtag Generator (Phase-2)</p>
+  <p>✔ Title Optimizer (Phase-2)</p>
+</section>
+
+<footer>
+  © 2026 Calcgrow
+</footer>
+
+<script src="js/app.js"></script>
+</body>
 </html>
